--- a/framework/pom.xml
+++ b/framework/pom.xml
@@ -112,6 +112,16 @@
             <artifactId>shiro-redis</artifactId>
             <version>${shiro.redis.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>${poi.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>${poi.version}</version>
+        </dependency>
 
     </dependencies>
 
