1.系统配置 2.中文转unicode小工具

--- a/pom.xml
+++ b/pom.xml
@@ -169,6 +169,7 @@
         <module>archive</module>
         <module>system</module>
         <module>game</module>
+        <module>keke</module>
     </modules>
 
     <profiles>
