--- a/framework/pom.xml
+++ b/framework/pom.xml
@@ -123,6 +123,13 @@
             <version>${poi.version}</version>
         </dependency>
 
+        <!-- jwt -->
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>${jwt.version}</version>
+        </dependency>
+
     </dependencies>
 
 </project>
