--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         <shiro.version>1.4.0</shiro.version>
         <shiro.redis.version>2.4.2.1-RELEASE</shiro.redis.version>
         <poi.version>3.9</poi.version>
+        <jwt.version>0.9.0</jwt.version>
     </properties>
 
     <!-- 依赖声明 -->
@@ -152,6 +153,13 @@
                 <groupId>org.apache.poi</groupId>
                 <artifactId>poi-ooxml</artifactId>
                 <version>${poi.version}</version>
+            </dependency>
+
+            <!-- jwt -->
+            <dependency>
+                <groupId>io.jsonwebtoken</groupId>
+                <artifactId>jjwt</artifactId>
+                <version>${jwt.version}</version>
             </dependency>
 
             <!--<dependency>-->
