电机项目20201214->电机项目bug修复

--- a/framework/src/main/resources/datasources.properties
+++ b/framework/src/main/resources/datasources.properties
@@ -1,10 +1,10 @@
-#¸ÃÖĞÎÄ±ØĞëºÍDataSourceTypeÃ¶¾ÙÖµ¶¨ÒåµÄÒ»Ö±
+#æ•°æ®åº“é©±åŠ¨ç±»ä»¥åŠé»˜è®¤æ•°æ®æº
 king.default-ds=MASTER
 king.driver-class-name=com.mysql.jdbc.Driver
 
-#Ö÷¿â
+#ä¸»æ•°æ®æº
 king.attrs[0].name=MASTER
-king.attrs[0].url=jdbc:mysql://127.0.0.1:3306/king-master?characterEncoding=utf8&serverTimezone=GMT%2B8
+king.attrs[0].url=jdbc:mysql://127.0.0.1:3306/machine?characterEncoding=utf8&serverTimezone=GMT%2B8
 king.attrs[0].driver-class-name=${king.driver-class-name}
 king.attrs[0].username=root
 king.attrs[0].password=
@@ -12,7 +12,7 @@ king.attrs[0].initial-size=1
 king.attrs[0].max-active=20
 king.attrs[0].min-idle=3
 
-#´Ó¿â
+#ä»æ•°æ®æº
 #king.attrs[1].name=SLAVE
 #king.attrs[1].url=jdbc:mysql://127.0.0.1:3306/king-slave?characterEncoding=utf8&serverTimezone=GMT%2B8
 #king.attrs[1].driver-class-name=${king.driver-class-name}
@@ -22,7 +22,7 @@ king.attrs[0].min-idle=3
 #king.attrs[1].max-active=100
 #king.attrs[1].min-idle=3
 
-#·Ö¿â
+#åˆ†æ•°æ®æº
 #king.attrs[2].name=SHARE
 #king.attrs[2].url=jdbc:mysql://127.0.0.1:3306/king-share?characterEncoding=utf8&serverTimezone=GMT%2B8
 #king.attrs[2].driver-class-name=${king.driver-class-name}
