--- a/keke/pom.xml
+++ b/keke/pom.xml
@@ -11,6 +11,8 @@
 
     <artifactId>keke</artifactId>
 
+    <packaging>war</packaging>
+
     <properties>
         <filter.relativePath>../</filter.relativePath>
     </properties>
@@ -19,6 +21,12 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
+            <version>${spring.boot.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
             <version>${spring.boot.version}</version>
         </dependency>
         <!-- Spring Boot 缓存支持启动器 -->
@@ -89,6 +97,16 @@
 
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>2.5</version>
+                <configuration>
+                    <failOnMissingWebXml>false</failOnMissingWebXml>
+                    <archiveClasses>false</archiveClasses>
+                    <attachClasses>true</attachClasses>
+                </configuration>
+            </plugin>
             <!--mybatis逆向工程maven插件-->
             <plugin>
                 <groupId>org.mybatis.generator</groupId>
