--- a/system/pom.xml
+++ b/system/pom.xml
@@ -21,6 +21,12 @@
             <artifactId>spring-boot-starter</artifactId>
             <version>${spring.boot.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <version>${spring.boot.version}</version>
+        </dependency>
         <!-- Spring Boot 缓存支持启动器 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -89,6 +95,16 @@
 
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>2.5</version>
+                <configuration>
+                    <failOnMissingWebXml>false</failOnMissingWebXml>
+                    <archiveClasses>false</archiveClasses>
+                    <attachClasses>true</attachClasses>
+                </configuration>
+            </plugin>
             <!--mybatis逆向工程maven插件-->
             <plugin>
                 <groupId>org.mybatis.generator</groupId>
