--- a/pom.xml
+++ b/pom.xml
@@ -59,7 +59,7 @@
             <dependency>
                 <groupId>javax.servlet</groupId>
                 <artifactId>javax.servlet-api</artifactId>
-                <version>servlet.api.version</version>
+                <version>${servlet.api.version}</version>
                 <!--<scope>provided</scope>-->
             </dependency>
             <dependency>
