--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -47,12 +47,6 @@
             </exclusions>
             <version>${spring.boot.version}</version>
         </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-tomcat</artifactId>
-            <scope>provided</scope>
-            <version>${spring.boot.version}</version>
-        </dependency>
         <!--<dependency>-->
             <!--<groupId>org.springframework.boot</groupId>-->
             <!--<artifactId>spring-boot-starter-data-jpa</artifactId>-->
@@ -155,25 +149,25 @@
             <artifactId>system</artifactId>
             <version>${platform.version}</version>
         </dependency>
+
         <dependency>
             <groupId>com.king</groupId>
             <artifactId>game</artifactId>
             <type>war</type>
-            <scope>provided</scope>
             <version>${platform.version}</version>
         </dependency>
+
         <dependency>
             <groupId>com.king</groupId>
             <artifactId>electric-machine</artifactId>
             <type>war</type>
-            <scope>provided</scope>
             <version>${platform.version}</version>
         </dependency>
+
         <dependency>
             <groupId>com.king</groupId>
             <artifactId>keke</artifactId>
             <type>war</type>
-            <scope>provided</scope>
             <version>${platform.version}</version>
         </dependency>
     </dependencies>
@@ -203,13 +197,12 @@
         </resources>
 
         <plugins>
+            <!--war包插件-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
-                <version>2.5</version>
+                <version>3.3.1</version>
                 <configuration>
-                    <webappDirectory>${basedir}/src/main/webapp</webappDirectory>
-                    <warSourceDirectory>${basedir}/src/main/webapp</warSourceDirectory>
                     <overlays>
                         <overlay>
                             <groupId>com.king</groupId>
@@ -224,14 +217,17 @@
                             <artifactId>game</artifactId>
                         </overlay>
                     </overlays>
+                    <!-- class文件会自动打JAR包 -->
+                    <archiveClasses>false</archiveClasses>
+                    <!--排除netcdf-4.2-min.jar多个用逗号隔开-->
+                    <packagingExcludes>
+                        WEB-INF/lib/electric-machine-1.0-SNAPSHOT.jar,WEB-INF/lib/game-1.0-SNAPSHOT.jar
+                    </packagingExcludes>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <configuration>
-                    <fork>true</fork>
-                </configuration>
             </plugin>
             <!--mybatis逆向工程maven插件-->
             <plugin>
